k8s/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: hello-world_app
        resources:
          requests:
            memory: "150m"
            cpu: "50m"
          limits:
            memory: "250m"
            cpu: "50m"
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
